--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             package.</h2>
                         <h2 class="my-4">Track keywords on mobile and desktop indexes daily
                             across 6 international territories.</h2>
-                        <button class="btn btn-discover">Discover More</button>
+                        <div class="text-center"><button class="btn btn-discover">Discover More</button></div>
                     </div>
                 </div>
             </div> <!--  /.row -->
@@ -118,7 +118,7 @@
                         <h2 class="my-4">With easy and clear data at a keyword level, prioritising
                             the high value and correct keywords has never been
                             easier.</h2>
-                        <button class="btn btn-discover">Discover More</button>
+                        <div class="text-center"><button class="btn btn-discover">Discover More</button></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-xs-12 img">
@@ -137,7 +137,7 @@
                             fully optimised to promote high rankings.</h2>
                         <h2 class="my-4">Clear reults and optimisation score makes prioritising
                             optimisation tasks easy.</h2>
-                        <button class="btn btn-discover">Discover More</button>
+                        <div class="text-center"><button class="btn btn-discover">Discover More</button></div>
                     </div>
                 </div>
             </div> <!--  /.row -->
