--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                         <li class="nav-item ml-md-5">
-                            <a class="btn btn-nav" href="#login">Login</a>
+                            <a class="btn btn-login" href="#login">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-nav active" href="#register">Register</a>
+                            <a class="btn btn-regi" href="#register">Register</a>
                         </li>
                     </ul>
                 </div>
