keyword align system update

--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
     *********************************************-->
     <section id="keyword">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4 text-center icon-box">
+            <div class="row justify-content-md-center">
+                <div class="col-xs-4 text-center icon-box mx-auto">
                     <i class="fa fa-4x fa-signal my-2 icon"></i>
                     <p>Track Keyword Ranking</p>
                 </div>
-                <div class="col-md-4 text-center icon-box">
+                <div class="col-xs-4 text-center icon-box mx-auto">
                     <i class="fa fa-4x fa-usd my-2 icon"></i>
                     <p>Estimate Keyword Value</p>
                 </div>
-                <div class="col-md-4 text-center icon-box">
+                <div class="col-xs-4 text-center icon-box mx-auto">
                     <i class="fa fa-4x fa-mouse-pointer my-2 icon"></i>
                     <p>On Page Optimisation</p>
                 </div>
