--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Botstrap -->
     <link rel="stylesheet" href="css/all.min.css"> <!-- font awesome -->
     <link rel="stylesheet" href="main.css"> <!-- custom -->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
