--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
-                        <li class="nav-item ml-md-5">
+                        <li class="nav-item mx-xs-auto">
                             <a class="btn btn-login" href="#login">Login</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mx-xs-auto">
                             <a class="btn btn-regi" href="#register">Register</a>
                         </li>
                     </ul>
